--- a/landing.html
+++ b/landing.html
@@ -18,9 +18,8 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+					<header id="header" class="alt">
+						<a href="index.html" class="logo"><strong>Wexican</strong> <span>.org</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -34,10 +33,10 @@
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-						<ul class="actions stacked">
+						<!--<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+						</ul> -->
 					</nav>
 
 				<!-- Banner -->
