--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 								<h1>Hi, my name is W</h1>
 							</header>
 							<div class="content">
-								<p>I partner with growing businesses to provide tailored-tech <br />
-								solutions for challenging and annoying problems.</p>
+								<p>I partner with growing businesses to build tailored-tech<br />
+								solutions to data and process problems. </p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Services</a></li>
 								</ul>
