--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
+								<h3>Get in touch</h3>
 								<form method="post" action="https://formspree.io/f/mlekkwjv" enctype="multipart/form-data">
 									<div class="fields">
 										<div class="field half">
